# token

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  clean.sh  client.cc  entrypoint.sh  inspector.cc  main.cc  swagger.json  tests.cc
Sources/: .gitignore  CMakeLists.txt  main.cc  token.cc  token.h.in
Sources/OldCode/: env.h
Sources/token/: address.cc  address.h  bignumber.h  block.cc  block.h  block_chain.cc  buffer.h  common.h  eventbus.h  filesystem.h  filesystem_osx.h  filesystem_windows.cc  filesystem_windows.h  hash.cc  hash.h  input.h  key.h  kvstore.h  merkle.cc  merkle.h  object.cc  object.h  output.h  platform.h  product.h  proposal.h  raw_proposal.h  sha256.cc  sha256.h  timestamp.h  token.cc  transaction.h  transaction_reference.h  type.h  uint256.h  user.h  uuid.h  version.h  wallet.cc  wallet.h
Sources/token/atomic/: work_stealing_queue.h
Sources/token/server/: message.h  session.h
Tests/: .gitignore  CMakeLists.txt  main.cc
Tests/token/: helpers.h  test_block.cc  test_buffer.cc  test_hash.cc  test_input.cc  test_merkle.cc  test_output.cc  test_product.cc  test_sha256.cc  test_transaction.cc  test_transaction_reference.cc  test_user.cc
tkn-core/: CMakeLists.txt
tkn-core/include/: block.h  block_chain.h  block_header.h  object.h  proposal.h  transaction.h  transaction_indexed.h  transaction_input.h  transaction_output.h  transaction_reference.h  transaction_signed.h  transaction_unclaimed.h  transaction_unsigned.h  type.h
tkn-core/include/codec/: codec.h  decoder.h  encoder.h
tkn-core/include/type/: product.h  proposal.h  user.h
tkn-core/protos/: block.proto  input.proto  output.proto  proposal.proto
tkn-core/src/: block.cc  block_chain.cc  block_header.cc  proposal.cc  transaction.cc  transaction_indexed.cc  transaction_input.cc  transaction_output.cc  transaction_reference.cc  transaction_signed.cc  transaction_unclaimed.cc  transaction_unsigned.cc
tkn-core/src/codec/: codec.cc
tkn-core/src/type/: product.cc  proposal.cc  user.cc
tkn-core/tests/: CMakeLists.txt  test_block.cc  test_input.cc  test_output.cc  test_transaction_indexed.cc  test_transaction_unclaimed.cc  test_transaction_unsigned.cc
tkn-http/: CMakeLists.txt  README.md
tkn-http/include/http/: http_client.h  http_common.h  http_controller.h  http_controller_health.h  http_controller_pool.h  http_message.h  http_request.h  http_response.h  http_router.h  http_service.h  http_service_health.h  http_service_rest.h  http_session.h
tkn-http/src/http/: http_client.cc  http_controller_chain.cc  http_controller_health.cc  http_controller_pool.cc  http_message.cc  http_router.cc  http_service.cc  http_service_health.cc  http_service_rest.cc  http_session.cc
tkn-platform/: CMakeLists.txt  README.md
tkn-platform/include/: filesystem_linux.h
tkn-platform/src/: filesystem_linux.cc  filesystem_osx.cc  os_thread_linux.cc  os_thread_osx.cc  os_thread_windows.cc
tkn-protos/: CMakeLists.txt
tkn-protos/protos/: input.proto  transaction.proto  unclaimed_transaction.proto
tkn-rpc/: CMakeLists.txt
tkn-rpc/include/rpc/: rpc_client.h  rpc_common.h  rpc_message.h  rpc_message_accepted.h  rpc_message_block.h  rpc_message_commit.h  rpc_message_handler.h  rpc_message_handshake.h  rpc_message_object.h  rpc_message_paxos.h  rpc_message_prepare.h  rpc_message_promise.h  rpc_message_rejected.h  rpc_message_transaction.h  rpc_message_verack.h  rpc_message_version.h  rpc_messages.h  rpc_server.h  rpc_session.h
tkn-rpc/protos/: message_verack.proto  message_version.proto
tkn-rpc/src/rpc/: rpc_message.cc  rpc_message_accepted.cc  rpc_message_block.cc  rpc_message_commit.cc  rpc_message_prepare.cc  rpc_message_promise.cc  rpc_message_rejected.cc  rpc_message_transaction.cc  rpc_message_verack.cc  rpc_message_version.cc
tkn-rpc/tests/: CMakeLists.txt  test_rpc_message_verack.cc  test_rpc_message_verack.h  test_rpc_message_version.cc  test_rpc_message_version.h
tkn-runtime/: CMakeLists.txt  main.cc
tkn-runtime/include/: acceptor.h  batch.h  block_committer.h  blockchain.h  config.h  configuration.h  flags.h  inspector.h  miner.h  miner_listener.h  object_pool.h  pool.h  proposal_scope.h  proposer.h  runtime.h  server.h  wallet_manager.h
tkn-runtime/include/consensus/: acceptor.h  election.h  proposal_listener.h  proposal_state.h  proposal_timer.h  proposer.h
tkn-runtime/include/http/: http_controller_chain.h  http_controller_health.h  http_controller_info.h  http_controller_pool.h  http_controller_wallet.h  http_service_health.h  http_service_rest.h
tkn-runtime/include/node/: node_server.h  node_session.h  node_session_message_handler.h
tkn-runtime/include/peer/: peer.h  (+5 more)
tkn-runtime/src/: acceptor.cc  async_block_committer.cc  async_block_committer.h  block_builder.cc  block_builder.h  block_builder_pool.h  block_committer.cc  block_committer.h  block_committer_async.h  block_committer_sync.cc  block_committer_sync.h  block_verifier.cc  block_verifier.h  block_verifier_sync.cc  block_verifier_sync.h  blockchain.cc  blockchain_initializer.h  blockchain_pruner.h  config.cc  configuration.cc  flags.cc  main.cc  miner.cc  object_pool.cc  pool.cc  proposal.cc  proposal_scope.cc  proposer.cc  rpc_server_session.cc  runtime.cc  sync_block_committer.cc  sync_block_committer.h  sync_block_verifier.cc  sync_transaction_committer.cc  sync_transaction_committer.h  sync_transaction_verifier.cc  sync_transaction_verifier.h  token.cc  transaction_input_verifier.cc  transaction_input_verifier.h
tkn-task-engine/: CMakeLists.txt  README.md
tkn-utils/: CMakeLists.txt  README.md
tkn-utils/include/: address.h  array.h  buffer.h  builder.h  common.h  dbutils.h  eventbus.h  filesystem.h  hash.h  inventory.h  json.h  keychain.h  kvstore.h  loop_thread.h  message.h  os_thread.h  os_thread_linux.h  placeholder.h  platform.h  raw_proposal.h  relaxed_atomic.h  server.h  session.h  string_utils.h  timer.h  timestamp.h  trie.h  uuid.h  version.h  work_stealing_queue.h
tkn-utils/src/: address.cc  eventbus.cc  filesystem.cc  keychain.cc  os_thread_linux.cc  placeholder.cc
(+949 files in other folders)
